force-app/main/default/objects/TAC_Talent__c/TAC_Talent__c.object-meta.xml
<CustomObject>
    <description>Student profile for Agentic Campus talent pipeline</description>
    <label>TAC Talent</label>
    <nameField>
        <label>Talent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAC Talents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>