force-app/main/default/objects/TAC_Talent__c/fields/Creatathon_Edition__c.field-meta.xml
<CustomField>
    <fullName>Creatathon_Edition__c</fullName>
    <label>Creatathon Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>