force-app/main/default/objects/TAC_Talent__c/fields/Creatathon_Participant__c.field-meta.xml
<CustomField>
    <fullName>Creatathon_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creatathon Participant</label>
    <type>Checkbox</type>
</CustomField>