force-app/main/default/objects/TAC_Talent__c/fields/Job_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Job_Readiness_Score__c</fullName>
    <label>Job Readiness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>