force-app/main/default/objects/TAC_Talent__c/fields/Launch_Status__c.field-meta.xml
<CustomField>
    <fullName>Launch_Status__c</fullName>
    <label>Launch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scouted</fullName>
                <default>true</default>
                <label>Scouted</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Project Deployed</fullName>
            </value>
            <value>
                <fullName>Job Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>