force-app/main/default/objects/TAC_Talent__c/fields/Salesforce_Skills__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Skills__c</fullName>
    <label>Salesforce Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>